# deploy

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  LICENSE  README.md  Saltfile  cloudflare-account.txt  cloudflare-zones.txt  deploy-docs.sh  deploy-infrastructure.sh  deploy-profile.sh  deploy-standard.sh  firewall-settings.typical  main.tf  manage.py  ocdsindex-exclude.txt  open-contracting-extension_registry-deploy.sh  open-contracting-standard-deploy.sh  profile-deploy.sh  pyproject.toml  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  requirements_test.in  requirements_test.txt  run.py  setup-redash.sh
docs/: Makefile  conf.py  creating-a-new-server.rst  deploying.rst  get_started.rst  index.rst  making-changes.rst  monitor.rst  on-non-ocp-servers.rst  on-ocp-servers.rst  on-your-servers.rst  regular-maintenance.rst  salt.rst  scripts-used-by-travis.rst  server-monitoring.rst  update.rst
pillar/: cms.sls  coalition.sls  common.sls  common_pillar.sls  corporate.sls  cove.sls  cove_maintenance.sls  cove_oc4ids.sls  cove_oc4ids_live_pillar.sls  cove_oc4ids_maintenance.sls  cove_ocds.sls  cove_ocds_dev1_pillar.sls  cove_ocds_live3_pillar.sls  cove_ocds_live_pillar.sls  cove_pillar.sls  covid19.sls  covid19_dev.sls  covid19_prod.sls  credere.sls  credere_common.sls  credere_dev.sls  credere_dev_maintenance.sls  credere_production.sls  credere_production_maintenance.sls  credere_staging.sls  digitalbuying.sls  django.sls  django_pillar.sls  docker.sls  docs.sls  docs_maintenance.sls  dream_bi.sls  dream_bi_maintenance.sls  dreambi.sls  kingfisher.sls  kingfisher_backups.sls  kingfisher_common.sls  kingfisher_main.sls  kingfisher_main_maintenance.sls  kingfisher_process.sls  (+35 more)
salt/: apache-proxy.sls  apache.sls  core.sls  cove.sls  covid19.sls  django.sls  docker.sls  docs-legacy.sls  docs.sls  kingfisher-analyse.sls  kingfisher-archive.sls  kingfisher-collect.sls  kingfisher-process.sls  kingfisher.sls  letsencrypt.sls  lib.sls  ocds-docs-common.sls  ocds-docs-live.sls  ocds-docs-staging.sls  ocds-legacy.sls  ocds-redash.sls  ocdskingfisher.sls  ocdskingfisheranalyse.sls  ocdskingfisherarchive.sls  ocdskingfisherarchiveonarchive.sls  ocdskingfisherarchiveonprocess.sls  (+24 more)
salt-config/: master  roster
(+663 files in other folders)
